--- a/grokking-machine-learning/08-naive-bayes-model/01_spam_detection_with_naive_bayes.ipynb
+++ b/grokking-machine-learning/08-naive-bayes-model/01_spam_detection_with_naive_bayes.ipynb
@@ -6,7 +6,7 @@
       "name": "01-spam-detection-with-naive-bayes.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPrgnsMDaPdQOYn09d5f1U0",
+      "authorship_tag": "ABX9TyNhNZEV+e1IpV3ugMkZ2uiK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,7 +113,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "a02a0d59-1e13-44b1-a0a4-1c331f697477"
+        "outputId": "f765b96b-b927-477c-9fa2-be34be615caf"
       },
       "execution_count": 3,
       "outputs": [
@@ -130,7 +130,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-86205c6f-ea71-4ffc-b326-05726c374c23\">\n",
+              "  <div id=\"df-7677d153-82c5-4db8-876a-01cd2ee55633\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -183,7 +183,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-86205c6f-ea71-4ffc-b326-05726c374c23')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7677d153-82c5-4db8-876a-01cd2ee55633')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -234,12 +234,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-86205c6f-ea71-4ffc-b326-05726c374c23 button.colab-df-convert');\n",
+              "          document.querySelector('#df-7677d153-82c5-4db8-876a-01cd2ee55633 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-86205c6f-ea71-4ffc-b326-05726c374c23');\n",
+              "          const element = document.querySelector('#df-7677d153-82c5-4db8-876a-01cd2ee55633');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -291,7 +291,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "5a5960ab-8572-48ad-f567-40e42a5a84b5"
+        "outputId": "3bccc877-6ecc-4379-eb61-ab76043b5b8e"
       },
       "execution_count": 5,
       "outputs": [
@@ -307,15 +307,15 @@
               "4  Subject: do not have money , get software cds ...     1   \n",
               "\n",
               "                                               words  \n",
-              "0  [market, do, %, original, interested, full, ma...  \n",
-              "1  [inflexible, nameable, morristown, and, try, o...  \n",
-              "2  [all, factor, form, and, take, website, ., is,...  \n",
-              "3  [golden, canyon, version, :, ramsey, form, mai...  \n",
-              "4  [me, do, all, finish, ain, comedies, are, ., i...  "
+              "0  [you, iogo, nowadays, benefits, within, really...  \n",
+              "1  [pirogue, earmark, optima, trading, sapling, s...  \n",
+              "2  [you, show, for, of, minute, unconditionally, ...  \n",
+              "3  [canyon, goldengraphix, for, of, format, ramse...  \n",
+              "4  [great, be, money, tradgedies, ain, ?, are, he...  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-093388c3-6084-47f7-9a47-989976763c19\">\n",
+              "  <div id=\"df-f2fb25b3-124e-4ac4-9cdd-15d3ca8fbf8c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -345,36 +345,36 @@
               "      <th>0</th>\n",
               "      <td>Subject: naturally irresistible your corporate...</td>\n",
               "      <td>1</td>\n",
-              "      <td>[market, do, %, original, interested, full, ma...</td>\n",
+              "      <td>[you, iogo, nowadays, benefits, within, really...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>Subject: the stock trading gunslinger  fanny i...</td>\n",
               "      <td>1</td>\n",
-              "      <td>[inflexible, nameable, morristown, and, try, o...</td>\n",
+              "      <td>[pirogue, earmark, optima, trading, sapling, s...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>Subject: unbelievable new homes made easy  im ...</td>\n",
               "      <td>1</td>\n",
-              "      <td>[all, factor, form, and, take, website, ., is,...</td>\n",
+              "      <td>[you, show, for, of, minute, unconditionally, ...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>Subject: 4 color printing special  request add...</td>\n",
               "      <td>1</td>\n",
-              "      <td>[golden, canyon, version, :, ramsey, form, mai...</td>\n",
+              "      <td>[canyon, goldengraphix, for, of, format, ramse...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>Subject: do not have money , get software cds ...</td>\n",
               "      <td>1</td>\n",
-              "      <td>[me, do, all, finish, ain, comedies, are, ., i...</td>\n",
+              "      <td>[great, be, money, tradgedies, ain, ?, are, he...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-093388c3-6084-47f7-9a47-989976763c19')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f2fb25b3-124e-4ac4-9cdd-15d3ca8fbf8c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -425,12 +425,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-093388c3-6084-47f7-9a47-989976763c19 button.colab-df-convert');\n",
+              "          document.querySelector('#df-f2fb25b3-124e-4ac4-9cdd-15d3ca8fbf8c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-093388c3-6084-47f7-9a47-989976763c19');\n",
+              "          const element = document.querySelector('#df-f2fb25b3-124e-4ac4-9cdd-15d3ca8fbf8c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -492,7 +492,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ad4970fb-ff7c-43b3-cfff-7e8989697fd5"
+        "outputId": "9b5664f6-39b7-45ad-8df7-80242cc869c2"
       },
       "execution_count": 6,
       "outputs": [
@@ -533,10 +533,277 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "We need to find the probabilities that spam (and ham) emails contain a certain word."
       ],
       "metadata": {
         "id": "pN7BPUPnKfUr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  write a dictionary, and in this dictionary record every word, and its pair of occurrences in spam and ham\n",
+        "model = {}\n",
+        "for index, email in emails.iterrows():\n",
+        "  for word in email[\"words\"]:\n",
+        "    if word not in model:\n",
+        "      # Note that the counts are initialized at 1 to avoid having zero counts\n",
+        "      model[word] = {\"spam\": 1, \"ham\": 1}\n",
+        "    if word in model:\n",
+        "      if email[\"spam\"]:\n",
+        "        model[word][\"spam\"] += 1\n",
+        "      else:\n",
+        "        model[word][\"ham\"] += 1"
+      ],
+      "metadata": {
+        "id": "b8shBe0IQv5m"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now let’s examine some rows of the dictionary."
+      ],
+      "metadata": {
+        "id": "384uoMjiR6zu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model[\"lottery\"]"
+      ],
+      "metadata": {
+        "id": "aB7TUgozR7pr",
+        "outputId": "f87c53aa-804a-4612-b385-743406a103d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'ham': 1, 'spam': 9}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model[\"sale\"]"
+      ],
+      "metadata": {
+        "id": "9rwzmKJhSAhF",
+        "outputId": "23118954-e9f0-4f33-bc3d-7782b7edb0b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'ham': 42, 'spam': 39}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Although this dictionary doesn’t contain any\n",
+        "probabilities, these can be deduced by dividing the first entry by the sum of both entries.\n"
+      ],
+      "metadata": {
+        "id": "b7gSg1zKSWUH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# the probability of lottery being spam\n",
+        "model[\"lottery\"][\"spam\"] / (model[\"lottery\"][\"ham\"] + model[\"lottery\"][\"spam\"])"
+      ],
+      "metadata": {
+        "id": "VRl-6dbYSXpn",
+        "outputId": "d50c351a-419d-4967-f9ea-5cd4d7983112",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# the probability of sale being spam\n",
+        "model[\"sale\"][\"spam\"] / (model[\"sale\"][\"ham\"] + model[\"sale\"][\"spam\"])"
+      ],
+      "metadata": {
+        "id": "XQjoDwW_S4ux",
+        "outputId": "ff5670dc-d37d-4b3a-fa76-d699c65dce50",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.48148148148148145"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's generalize it."
+      ],
+      "metadata": {
+        "id": "vkIqaNyuTVHK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def predict_bayes(word):\n",
+        "  word = word.lower()\n",
+        "  num_spam = model[word][\"spam\"]\n",
+        "  num_ham = model[word][\"ham\"]\n",
+        "  return 1.0 * num_spam / (num_spam + num_ham)"
+      ],
+      "metadata": {
+        "id": "-7RHe0X3TYq6"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predict_bayes(\"lottery\")"
+      ],
+      "metadata": {
+        "id": "Ia8LAuRuTvfc",
+        "outputId": "cf86707d-a1b3-43fa-bf60-5d71d6f9e2be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predict_bayes(\"sale\")"
+      ],
+      "metadata": {
+        "id": "vkjIfg_OTzjW",
+        "outputId": "58b517a8-a125-407c-9e9d-deb92d384f26",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.48148148148148145"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predict_bayes(\"won\")"
+      ],
+      "metadata": {
+        "id": "FPt2JBGYT225",
+        "outputId": "62092f7e-c202-4c48-adcd-29ff3751e388",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.3595505617977528"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##The naive Bayes algorithm"
+      ],
+      "metadata": {
+        "id": "P_oHP64qTErE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "veUHR-ULTGUW"
       }
     }
   ]
