--- a/grokking-machine-learning/08-naive-bayes-model/01_spam_detection_with_naive_bayes.ipynb
+++ b/grokking-machine-learning/08-naive-bayes-model/01_spam_detection_with_naive_bayes.ipynb
@@ -6,7 +6,7 @@
       "name": "01-spam-detection-with-naive-bayes.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNhNZEV+e1IpV3ugMkZ2uiK",
+      "authorship_tag": "ABX9TyMRiXomILFirRPZoBhNkTqb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,7 +113,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "f765b96b-b927-477c-9fa2-be34be615caf"
+        "outputId": "1059100b-0203-4bc0-a2d9-eac85b303ea8"
       },
       "execution_count": 3,
       "outputs": [
@@ -130,7 +130,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7677d153-82c5-4db8-876a-01cd2ee55633\">\n",
+              "  <div id=\"df-5813a161-7764-409f-b6b3-bd78b4fb660f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -183,7 +183,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7677d153-82c5-4db8-876a-01cd2ee55633')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5813a161-7764-409f-b6b3-bd78b4fb660f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -234,12 +234,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7677d153-82c5-4db8-876a-01cd2ee55633 button.colab-df-convert');\n",
+              "          document.querySelector('#df-5813a161-7764-409f-b6b3-bd78b4fb660f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7677d153-82c5-4db8-876a-01cd2ee55633');\n",
+              "          const element = document.querySelector('#df-5813a161-7764-409f-b6b3-bd78b4fb660f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -291,7 +291,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "3bccc877-6ecc-4379-eb61-ab76043b5b8e"
+        "outputId": "1fccffff-5e7b-4a65-9eb8-e32c20dcdf14"
       },
       "execution_count": 5,
       "outputs": [
@@ -307,15 +307,15 @@
               "4  Subject: do not have money , get software cds ...     1   \n",
               "\n",
               "                                               words  \n",
-              "0  [you, iogo, nowadays, benefits, within, really...  \n",
-              "1  [pirogue, earmark, optima, trading, sapling, s...  \n",
-              "2  [you, show, for, of, minute, unconditionally, ...  \n",
-              "3  [canyon, goldengraphix, for, of, format, ramse...  \n",
-              "4  [great, be, money, tradgedies, ain, ?, are, he...  "
+              "0  [it, do, our, will, :, distinctive, hard, with...  \n",
+              "1  [attire, attainder, try, plain, merrill, chron...  \n",
+              "2  [unconditionally, we, approved, time, $, and, ...  \n",
+              "3  [goldengraphix, mail, and, (, our, is, 4, rams...  \n",
+              "4  [finish, are, it, do, is, to, compatibility, c...  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f2fb25b3-124e-4ac4-9cdd-15d3ca8fbf8c\">\n",
+              "  <div id=\"df-cc49ed95-028d-4562-a842-d83e740fe79d\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -345,36 +345,36 @@
               "      <th>0</th>\n",
               "      <td>Subject: naturally irresistible your corporate...</td>\n",
               "      <td>1</td>\n",
-              "      <td>[you, iogo, nowadays, benefits, within, really...</td>\n",
+              "      <td>[it, do, our, will, :, distinctive, hard, with...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>Subject: the stock trading gunslinger  fanny i...</td>\n",
               "      <td>1</td>\n",
-              "      <td>[pirogue, earmark, optima, trading, sapling, s...</td>\n",
+              "      <td>[attire, attainder, try, plain, merrill, chron...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>Subject: unbelievable new homes made easy  im ...</td>\n",
               "      <td>1</td>\n",
-              "      <td>[you, show, for, of, minute, unconditionally, ...</td>\n",
+              "      <td>[unconditionally, we, approved, time, $, and, ...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>Subject: 4 color printing special  request add...</td>\n",
               "      <td>1</td>\n",
-              "      <td>[canyon, goldengraphix, for, of, format, ramse...</td>\n",
+              "      <td>[goldengraphix, mail, and, (, our, is, 4, rams...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>Subject: do not have money , get software cds ...</td>\n",
               "      <td>1</td>\n",
-              "      <td>[great, be, money, tradgedies, ain, ?, are, he...</td>\n",
+              "      <td>[finish, are, it, do, is, to, compatibility, c...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f2fb25b3-124e-4ac4-9cdd-15d3ca8fbf8c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cc49ed95-028d-4562-a842-d83e740fe79d')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -425,12 +425,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f2fb25b3-124e-4ac4-9cdd-15d3ca8fbf8c button.colab-df-convert');\n",
+              "          document.querySelector('#df-cc49ed95-028d-4562-a842-d83e740fe79d button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f2fb25b3-124e-4ac4-9cdd-15d3ca8fbf8c');\n",
+              "          const element = document.querySelector('#df-cc49ed95-028d-4562-a842-d83e740fe79d');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -492,7 +492,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9b5664f6-39b7-45ad-8df7-80242cc869c2"
+        "outputId": "038f8594-91ae-415a-978e-0f28e5d9fc48"
       },
       "execution_count": 6,
       "outputs": [
@@ -577,7 +577,7 @@
       ],
       "metadata": {
         "id": "aB7TUgozR7pr",
-        "outputId": "f87c53aa-804a-4612-b385-743406a103d5",
+        "outputId": "a69a2dbb-5da1-4fb9-c1aa-93879f759601",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -603,7 +603,7 @@
       ],
       "metadata": {
         "id": "9rwzmKJhSAhF",
-        "outputId": "23118954-e9f0-4f33-bc3d-7782b7edb0b3",
+        "outputId": "c125ab53-2439-4020-9016-2c3efce17b11",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -640,12 +640,12 @@
       ],
       "metadata": {
         "id": "VRl-6dbYSXpn",
-        "outputId": "d50c351a-419d-4967-f9ea-5cd4d7983112",
+        "outputId": "7c6957af-f5b5-4cda-fac7-56e5c017acbc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -655,7 +655,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 10
         }
       ]
     },
@@ -667,12 +667,12 @@
       ],
       "metadata": {
         "id": "XQjoDwW_S4ux",
-        "outputId": "ff5670dc-d37d-4b3a-fa76-d699c65dce50",
+        "outputId": "06b8af09-2c26-4396-fc86-c3179003aeb4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -682,7 +682,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 11
         }
       ]
     },
@@ -707,7 +707,7 @@
       "metadata": {
         "id": "-7RHe0X3TYq6"
       },
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -717,12 +717,12 @@
       ],
       "metadata": {
         "id": "Ia8LAuRuTvfc",
-        "outputId": "cf86707d-a1b3-43fa-bf60-5d71d6f9e2be",
+        "outputId": "25f321a7-7b6a-475c-d955-a4543a11257e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -732,7 +732,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 13
         }
       ]
     },
@@ -743,12 +743,12 @@
       ],
       "metadata": {
         "id": "vkjIfg_OTzjW",
-        "outputId": "58b517a8-a125-407c-9e9d-deb92d384f26",
+        "outputId": "8e4aebfd-e040-43bc-a5c9-581131ddfff3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -758,7 +758,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 14
         }
       ]
     },
@@ -769,12 +769,12 @@
       ],
       "metadata": {
         "id": "FPt2JBGYT225",
-        "outputId": "62092f7e-c202-4c48-adcd-29ff3751e388",
+        "outputId": "f191ecf6-6373-4d06-d5c2-e3d76e56dcb7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -784,7 +784,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 15
         }
       ]
     },
@@ -800,11 +800,267 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "The input of the algorithm is the email. It goes through all the words in the email, and for each\n",
+        "word, it calculates the probabilities that a spam email contains it and that a ham email contains\n",
+        "it.\n",
+        "\n",
+        "Then we multiply these probabilities (the naive assumption) and apply Bayes’ theorem to find the\n",
+        "probability that an email is spam given that it contains the words on this particular email."
       ],
       "metadata": {
         "id": "veUHR-ULTGUW"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def predict_naive_bayes(email):\n",
+        "  # Calculates the total number of emails, spam emails, and ham emails\n",
+        "  total = len(emails)\n",
+        "  num_spam = sum(emails[\"spam\"])\n",
+        "  num_ham = total - num_spam\n",
+        "\n",
+        "  # Processes each email by turning it into a list of its words in lowercase\n",
+        "  email = email.lower()\n",
+        "  words = set(email.split())\n",
+        "  spams = [1.0]\n",
+        "  hams = [1.0]\n",
+        "\n",
+        "  # For each word, computes the conditional probability that an email containing that word is spam (or ham), as a ratio\n",
+        "  for word in words:\n",
+        "    if word in model:\n",
+        "      spams.append(model[word][\"spam\"] / num_spam * total)\n",
+        "      hams.append(model[word][\"ham\"] / num_ham * total)\n",
+        "\n",
+        "  # Multiplies all the previous probabilities times the prior probability of the email being spam, and ham\n",
+        "  prod_spams = np.log(np.prod(spams) * num_spam)\n",
+        "  prod_hams = np.log(np.prod(hams) * num_ham)\n",
+        "\n",
+        "  # Normalizes these two probabilities to get them to add to one (using Bayes’ theorem) and returns the result\n",
+        "  return prod_spams / (prod_spams + prod_hams)"
+      ],
+      "metadata": {
+        "id": "_umGN07ANC4L"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now that we have built the model, let’s test it by making predictions on some emails."
+      ],
+      "metadata": {
+        "id": "xOMIbAjNParP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predict_naive_bayes(\"lottery sale\")"
+      ],
+      "metadata": {
+        "id": "RdSeBnroQDfN",
+        "outputId": "756bf7af-80a7-416d-c7b0-8a7768a56f0f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5573625228656424"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predict_naive_bayes(\"Hi mom how are you\")"
+      ],
+      "metadata": {
+        "id": "ef9ZQfaOPbSR",
+        "outputId": "183fa150-5c56-46f4-ecc2-aea5c103dd3e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.48743444104407146"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predict_naive_bayes(\"Hi MOM how aRe yoU afdjsaklfsdhgjasdhfjklsd\")"
+      ],
+      "metadata": {
+        "id": "FLAwwyVZP-El",
+        "outputId": "bf3fe94d-abac-45c0-a00a-cb42d039b61e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.48743444104407146"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predict_naive_bayes(\"meet me at the lobby of the hotel at nine am\")"
+      ],
+      "metadata": {
+        "id": "Kh2Hd-gNP3m9",
+        "outputId": "66053a20-3d75-4819-86bb-52227b619fce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.4619985211948569"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predict_naive_bayes(\"enter the lottery to win three million dollars\")"
+      ],
+      "metadata": {
+        "id": "D6DKaJUJQLxZ",
+        "outputId": "9b11b351-b077-4899-b58e-76de648bbc1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5371130104014242"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predict_naive_bayes(\"buy cheap lottery easy money now\")"
+      ],
+      "metadata": {
+        "id": "qDbP08s6QTYO",
+        "outputId": "08328014-a1b0-43ca-dce7-dc9501900e6f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5698786029874038"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predict_naive_bayes(\"Grokking Machine Learning by Luis Serrano\")"
+      ],
+      "metadata": {
+        "id": "TdpWcgtvQYpU",
+        "outputId": "cf4c52dc-b5fc-4e5f-d3b0-9ebb915013cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.4969110781385491"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predict_naive_bayes(\"asdfgh\")"
+      ],
+      "metadata": {
+        "id": "UtMDpd0EQiu5",
+        "outputId": "b4f72a42-2fc8-450d-8546-167848753d29",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.4628518191306706"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     }
   ]
 }
