--- a/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/0-ml-prerequisites/math_differential_calculus.ipynb
+++ b/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/0-ml-prerequisites/math_differential_calculus.ipynb
@@ -38,7 +38,7 @@
         "id": "ChS5BE53XXYr"
       },
       "source": [
-        "# Slope of a straight line"
+        "##Setup"
       ]
     },
     {
@@ -58,6 +58,15 @@
         "import matplotlib.animation as animation\n",
         "mpl.rc('animation', html='jshtml')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Slope of a straight line"
+      ],
+      "metadata": {
+        "id": "iCJuyby-BJVh"
+      }
     },
     {
       "cell_type": "markdown",
@@ -139,7 +148,7 @@
       "source": [
         "As you probably know, the slope of a (non-vertical) straight line can be calculated by taking any two points $\\mathrm{A}$ and $\\mathrm{B}$ on the line, and computing the \"rise over run\":\n",
         "\n",
-        "$slope = \\dfrac{rise}{run} = \\dfrac{\\Delta y}{\\Delta x} = \\dfrac{y_\\mathrm{B} - y_\\mathrm{A}}{x_\\mathrm{B} - x_\\mathrm{A}}$\n",
+        "$slope = \\dfrac{rise}{run} = \\dfrac{\\Delta y}{\\Delta x} = \\dfrac{y_\\mathrm{B} - y_\\mathrm{A}}{x_\\mathrm{B} - x_\\mathrm{A}} = \\dfrac{4-1}{7-1} = \\dfrac{3}{6} = \\dfrac{1}{2} = 0.5$\n",
         "\n",
         "\n",
         "In this example, the rise is 3, and the run is 6, so the slope is 3/6 = 0.5."
@@ -151,7 +160,7 @@
         "id": "mKJGxZIAXikF"
       },
       "source": [
-        "# Defining the slope of a curve"
+        "## Defining the slope of a curve"
       ]
     },
     {
@@ -167,7 +176,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 305
@@ -190,7 +198,6 @@
         }
       ],
       "source": [
-        "#@title\n",
         "xs = np.linspace(-2.1, 2.1, 500)\n",
         "ys = xs**2\n",
         "plt.plot(xs, ys)\n",
